public/style.css
.unselectable-text {
    user-select: none;
}

.title-display {
  display: flex;
  flex-direction: horizontal;
  justify-content: center;
}

.main-display {
  justify-content: center;
  display: flex;
}

.graph-display {
  width: 70%;
  justify-content: center;
}

.sidebar-display {
  flex-direction: column;
  display: flex;
  width: 30%;
}

#page-layout {
  display: flex;
  flex-direction: column;
}

#host-display {
  text-align: center;
  width: 50%;
  opacity: 0;
}

#target-display {
  text-align: center;
  width: 50%;
  opacity: 0;
}

#memory-vis {
  border-width: 2px;
  border-radius: 15px;
  border-color: black;

  margin: 10px;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

#memory-vis-header {
  text-align: center;
  font-family: 'Arial';
  opacity: 0;
}

#header-text {
  display: flex;
  flex-direction: row;
}

#memory-vis-header {
  height: 65px;
}

#memory-vis-header-wrapper {
  display: flex;
  flex-direction: column;
}

#memory-vis-header-subheading {
  display: flex;
  flex-direction: row;
}

#memory-vis-header-host {
  text-align: center;
  justify-content: center;
  width: 35%;

  opacity: 0;
}

#memory-vis-header-target {
  text-align: center;
  justify-content: center;
  width: 35%;

  opacity: 0;
}

#memory-vis-header-gap {
  width: 30%;
}

#memory-vis-display-wrapper {
  width: 100%;
  height: 100%;
  
  overflow-x: scroll;
  overflow-y: scroll;
  scrollbar-base-color: black;
}

#memory-vis-display {
  padding: 10px;
}

#footer {
  display: flex;
  flex-direction: row;
}

#data-upload-region {
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  font-family: "Arial", sans-serif;
  font-size: 36px;
  font-weight: bold;
  text-transform: uppercase;
  background-image: linear-gradient(to right, #1293f5, #cefe0bd5); /* Gradient background */
  -webkit-background-clip: text; /* Apply background to text */
  background-clip: text;
  -webkit-text-fill-color: transparent; /* Make text color transparent */
  /* text-shadow: 2px 2px 4px rgba(12, 175, 245, 0.3); */
}

.colored-text {
  color: yellow; /* Text color */
  background-color: #ff5733; /* Background color (example: orange) */
  padding: 2px 4px; /* Padding for the background */
  border-radius: 4px; /* Rounded corners */
  font-weight: bold; /* Bold font */
}

